# openenv-hackaton

./: .gitignore  README.md  deploy_spaces.sh  presentation.html
benchmarks/: __init__.py  eval_answering.py  eval_enrichment.py  persona_align.py  run_all.py
data/: __init__.py  fetch_datasets.py
demo/: app.py  run_real_benchmarks.py
demo/backend/: benchmarks.py
demo/data/: benchmark_results.json  extended_results.json
demo/inference/: 00_wandb_export.ipynb  01_cleaning_inference.ipynb  02_enrichment_inference.ipynb  03_answering_inference.ipynb  04_aggregate_results.ipynb  datasage_inference.ipynb
deployment/: train_stage1.sh  train_stage2.sh  train_stage3.sh
deployment/northflank/: job_stage1_cleaning.yaml  job_stage3_answering.yaml
docs/: changelog.md  environment_analysis.md  index.html  known_issues.md
docs/css/: style.css
docs/js/: charts.js  data.js
docs/plans/: 2026-03-07-datasage-design.md
docs/research/: 2026-03-08-rl-environment-improvement-papers.md
environments/answering/: README.md  client.py  models.py  openenv.yaml  pyproject.toml
environments/answering/server/: Dockerfile  __init__.py  answering_environment.py  app.py
environments/cleaning/: README.md  client.py  openenv.yaml  pyproject.toml
environments/cleaning/server/: app.py  (+2 more)
environments/enrichment/: client.py  models.py  openenv.yaml  pyproject.toml
environments/shared/: __init__.py  domains.py  enrichment_sources.py  enterprise_data.py  reward_utils.py
fsds_cleaning_env/: .dockerignore  AGENT_GUIDE.md  AGENT_PLAN.md  Dockerfile  FINAL_REPORT.md  README.md  __init__.py  agents.py  benchmark_guides.md  client.py  compare_agents.py  curriculum.py  dataset_generators.py  demonstrations.py  evaluate_agent.py  evaluation_tasks.py  metrics.py  model.py  models.py  openenv.yaml  plan_results.md  project_recommendations.md  pyproject.toml  results_heuristic.json  results_llm.json  results_random.json  reward.py  training_colab.py  training_sft.py
fsds_cleaning_env/configs/: basic_rl.json  basic_rl.yaml  curriculum_rl.json  curriculum_rl.yaml  sft_config.json
fsds_cleaning_env/data-cleaning-grpo-final/: README.md  adapter_config.json
fsds_cleaning_env/examples/: curriculum_demo.py  determinism_check.py  local_agent_demo.py  local_smoke_test.py  minimal_agent.py  reward_trace_demo.py  trl_rollout_stub.py
fsds_cleaning_env/notebooks/: SF_Hackathon_Isra_v2_Performances.ipynb  SF_Hackathon_Isra_v2_Training.ipynb
fsds_cleaning_env/server/: Dockerfile  __init__.py  app.py  cleaning_environment.py  requirements.txt
fsds_cleaning_env/tests/: test_reward.py
fsds_cleaning_env/training/: __init__.py  config.py  run_experiment.py
possible-improvements/answering/: README.md
possible-improvements/cleaning/: README.md  papers.md
possible-improvements/enrichment/: README.md
possible-improvements/grpo-training/: README.md
possible-improvements/pipeline/: README.md  papers.md
tests/: test_answering.py  test_cleaning.py  test_enrichment.py  test_integration_spaces.py  test_notebooks_self_contained.py  test_reward_utils.py
training/: train_answering.ipynb  train_answering.py  train_cleaning.ipynb  train_cleaning.py  train_enrichment.ipynb  train_enrichment.py
training/ran/: train_answering_ran.ipynb
training/shared/: __init__.py  config.py  parsers.py
tutorial/: openenv_training_colab.py
whole-pipeline-analysis/: README.md
whole-pipeline-analysis/benchmarks/: eval_cleaning.py
whole-pipeline-analysis/data/: labeling_functions.py
whole-pipeline-analysis/demo/: requirements.txt
whole-pipeline-analysis/environments/answering/: __init__.py  client.py  pyproject.toml
whole-pipeline-analysis/environments/answering/environments/shared/: reward_utils.py
whole-pipeline-analysis/environments/answering/server/: answering_environment.py  requirements.txt
whole-pipeline-analysis/environments/cleaning/: __init__.py  client.py  models.py  pyproject.toml
whole-pipeline-analysis/environments/cleaning/server/: Dockerfile  app.py
whole-pipeline-analysis/environments/enrichment/: README.md  __init__.py  pyproject.toml
whole-pipeline-analysis/environments/enrichment/server/: Dockerfile  app.py  enrichment_environment.py
(+52 files in other folders)
