[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-datasage-cleaning"
version = "0.1.0"
description = "DataSage Cleaning environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "datasage_cleaning.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["datasage_cleaning", "datasage_cleaning.server"]
package-dir = { "datasage_cleaning" = ".", "datasage_cleaning.server" = "server" }
