[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-datasage-enrichment"
version = "0.1.0"
description = "DataSage Enrichment environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "datasage_enrichment.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["datasage_enrichment", "datasage_enrichment.server"]
package-dir = { "datasage_enrichment" = ".", "datasage_enrichment.server" = "server" }
